--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,9 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}/async.js"
+      "name": "fibonacci",
+      "program": "${workspaceFolder}/fibonacci.js",
+      "runtimeExecutable": "${env:HOME}/.nvm/versions/node/v10.12.0/bin/node"
     }
   ]
 }
