--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "testing",
   "main": "async.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "fibonacci": "node fibonacci.js"
   },
   "engines" : { "node" :  "v10.12.0" },
   "keywords": [
