--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "fibonacci": "node fibonacci.js"
   },
-  "engines" : { "node" :  "v10.12.0" },
+  "engines": {
+    "node": "v10.12.0"
+  },
   "keywords": [
     "dev",
     "testing"
