--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "async.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "fibonacci": "node fibonacci.js"
+    "fibonacci": "node fibonacci.js",
+    "fizzbuzz": "node fizzBuzz.js",
+    "longestString": "node longestString.js"
   },
   "engines": {
     "node": "v10.12.0"
