--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "async.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "sort": "node sort.js",
     "fibonacci": "node fibonacci.js",
     "fizzbuzz": "node fizzBuzz.js",
     "longestString": "node longestString.js"
