--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "async.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sort": "node sort.js",
+    "eeAndDeps": "node eeAndDeps.js",
     "fibonacci": "node fibonacci.js",
     "fizzbuzz": "node fizzBuzz.js",
-    "longestString": "node longestString.js"
+    "longestString": "node longestString.js",
+    "sort": "node sort.js"
   },
   "engines": {
     "node": "v10.12.0"
